排查adminbundle-twig语言串1

--- a/src/Topxia/AdminBundle/Resources/views/App/center.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/App/center.html.twig
@@ -73,7 +73,7 @@
                                   {% else %}
                                      <a href="http://open.edusoho.com/app/{{ app.code }}" class="btn btn-warning app-btn" target="_blank">{{'购买'|trans}}</a>
                                   {% endif %}
-                                    <p class="mtm"><span class="text-muted">{{'价格：'|trans}}</sapn><span class="price"> ¥ {% if app.price > 0 %}{{ app.price}}{% else %}{{'免费'|trans}}{% endif %}</sapn></p>
+                                    <p class="mtm"><span class="text-muted">{{'价格：'|trans}}</span><span class="price"> ¥ {% if app.price > 0 %}{{ app.price}}{% else %}{{'免费'|trans}}{% endif %}</span></p>
                                 {% endif %}
                             </div>
                               </td>
@@ -92,7 +92,7 @@
                       <a href="#" data-toggle="modal" data-target="#modal" data-url="{{ path('admin_app_package_update_modal', {id:app.latestPackageId, type:'install'})}}" class="btn btn-primary app-btn" data-keyboard="false" data-backdrop="static">{{'安装'|trans}}</a>
                     {% endif %}
                     
-                    <p class="mtm"><span class="text-muted">{{'价格：'|trans}}</sapn><span class="price"> ¥ {% if app.price > 0 %}{{ app.price}}{% else %}{{'免费'|trans}}{% endif %}</sapn></p>
+                    <p class="mtm"><span class="text-muted">{{'价格：'|trans}}</span><span class="price"> ¥ {% if app.price > 0 %}{{ app.price}}{% else %}{{'免费'|trans}}{% endif %}</span></p>
                  {% else %}
                     {% if app.userAccess|default(null) == "impossible" %}
                       <a href="http://www.edusoho.com/product/system" class="user-access" target=_blank>{{'商业专属'|trans}}</a>
@@ -102,7 +102,7 @@
                       {% else %}
                          <a href="http://open.edusoho.com/app/{{ app.code }}" class="btn btn-warning app-btn" target="_blank">{{'购买'|trans}}</a>
                       {% endif %}
-                        <p class="mtm"><span class="text-muted">{{'价格：'|trans}}</sapn><span class="price"> ¥ {% if app.price > 0 %}{{ app.price}}{% else %}{{'免费'|trans}}{% endif %}</sapn></p>
+                        <p class="mtm"><span class="text-muted">{{'价格：'|trans}}</span><span class="price"> ¥ {% if app.price > 0 %}{{ app.price}}{% else %}{{'免费'|trans}}{% endif %}</span></p>
                     {% endif %}
                  {% endif %} 
                
