--- a/src/Topxia/AdminBundle/Resources/views/App/app-detail.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/App/app-detail.html.twig
@@ -26,4 +26,6 @@
               <div class="short-text text-muted">{{ app.description|plain_text(80) }} <span class="trigger">({{'展开'|trans}})</span></div>
               <div class="long-text text-muted">{{ app.description|raw }} <span class="trigger">({{'收起'|trans}})</span></div>
             </div>
-
+          </div>
+        </td>
+      </tr>
