--- a/src/Topxia/AdminBundle/Resources/views/CloudFile/Form/course-user-search.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/CloudFile/Form/course-user-search.html.twig
@@ -9,10 +9,10 @@
 	<!-- <div class="row"> -->
 	  <div class="materials-group"> 
 	{#       <ul class="form-group"> #}
-	          <select class="form-control form-csearch-type js-search-type" name="searchType">按来源 <span class="caret" ></span>
-	          	<option value="course"><a href="javascript:;" >按课程</a></option>
-	            <option value="title"><a href="javascript:;" >按标题</a></option>
-	            <option value="user"><a href="javascript:;" >按用户</a></option>
+	          <select class="form-control form-csearch-type js-search-type" name="searchType">{{ '按来源'|trans }} <span class="caret" ></span>
+	          	<option value="course"><a href="javascript:;" >{{ '按课程'|trans }}</a></option>
+	            <option value="title"><a href="javascript:;" >{{ '按标题'|trans }}</a></option>
+	            <option value="user"><a href="javascript:;" >{{ '按用户'|trans }}</a></option>
 	          </select>
           {#   <li class="dropdown">
               <a href="javascript:;" class="dropdown-toggle js-search-type" data-toggle="dropdown" name="searchType">
@@ -26,10 +26,10 @@
             </li>
          </ul> #}
 	      <div class="form-group">
-			    <input class="form-control " name="keywords" placeholder="输入关键词">
+			    <input class="form-control " name="keywords" placeholder="{{ '输入关键词'|trans }}">
 		    </div>
 		    <div class="form-group">
-		      <button class="btn btn-primary">搜索</button>
+		      <button class="btn btn-primary">{{ '搜索'|trans }}</button>
 		 </div>
 	  </div>
 	<!-- </div> -->
