--- a/src/Topxia/AdminBundle/Resources/views/CloudFile/Form/tags.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/CloudFile/Form/tags.html.twig
@@ -1,5 +1,5 @@
 <ul class="materials-nav materials-tags js-tags-container clearfix">
-  <li class="all active"><span>标签：</span></li>
+  <li class="all active"><span>{{ '标签：'|trans }}</span></li>
   {% for tag in tags %}
     <li class="js-tag-btn item">
       <a class="label label-default active-show" href="javascript:;" data-value="{{ tag.id }}" >{{ tag.name }}</a>
