--- a/src/Topxia/AdminBundle/Resources/views/CloudFile/api-error.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/CloudFile/api-error.html.twig
@@ -5,7 +5,7 @@
 {% block main %}
 
 <div class="text-center">
-  <h1 class="text-muted">网络问题，无法连接{{ 'EduSoho'|copyright_less }}开放云平台</h1>
+  <h1 class="text-muted">  {{ '网络问题，无法连接%edusoho%开放云平台'|trans({'%edusoho%': 'EduSoho'|copyright_less} ) }}</h1>
 </div>
 
 {% endblock %}
