--- a/src/Topxia/AdminBundle/Resources/views/CloudFile/preview-modal.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/CloudFile/preview-modal.html.twig
@@ -2,7 +2,7 @@
 
 {% set modal_class = 'modal-lg' %}
 
-{% block title %}<span class="text-muted">资料预览</span>{% endblock %}
+{% block title %}<span class="text-muted">{{ '资料预览'|trans }}</span>{% endblock %}
 
 {% block body %}
     {# {{ render(controller('TopxiaWebBundle:FileWatch:modalBody', {file:file})) }} #}
@@ -31,7 +31,7 @@
 
 {% block footer %}
   <div class="text-muted pull-left" style="font-size:10px">
-    资源编号：{{file.no}}
+      {{ '资源编号：'|trans }}{{file.no}}
   </div>
-	<button type="button" class="btn btn-primary" data-dismiss="modal">关闭</button>
+	<button type="button" class="btn btn-primary" data-dismiss="modal">{{ '关闭'|trans }}</button>
 {% endblock %}
