--- a/src/Topxia/AdminBundle/Resources/views/CloudFile/table-tr.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/CloudFile/table-tr.html.twig
@@ -5,11 +5,11 @@
           <input class="batch-item" value="{{ cloudFile.no }}" type="checkbox" data-role="batch-item" data-file-id="{{ cloudFile.id }}" data-link-count="{{ cloudFile.usedCount }}" data-file-name="{{ cloudFile.filename }}" style="display:none;" />
           <div class="mask">
             {% if (cloudFile.type in ['video','document','ppt'] and cloudFile.processStatus == 'ok') or cloudFile.type in ['audio','flash','image'] %}
-              <a class="btn btn-info btn-xs" href="#modal" data-toggle="modal" data-url="{{ path('admin_cloud_file_preview', {globalId: cloudFile.no}) }}">资料预览</a>
+              <a class="btn btn-info btn-xs" href="#modal" data-toggle="modal" data-url="{{ path('admin_cloud_file_preview', {globalId: cloudFile.no}) }}">{{ '资料预览'|trans }}</a>
             {% endif %}
             {% if cloudFile.processStatus == 'error' %}
               {% if setting("developer.debug")|default(0) %}
-              <a class="js-reconvert-btn btn btn-warning btn-xs" data-url='{{ path('admin_cloud_file_reconvert', {globalId:cloudFile.no}) }}' data-loading-text="正在提交...">重新转码</a>
+              <a class="js-reconvert-btn btn btn-warning btn-xs" data-url='{{ path('admin_cloud_file_reconvert', {globalId:cloudFile.no}) }}' data-loading-text="{{ '正在提交...'|trans }}">{{ '重新转码'|trans }}</a>
               {% endif %}
             {% endif %}
             {% if (cloudFile.type == 'video' and cloudFile.processStatus == 'ok') %}
@@ -24,7 +24,7 @@
           <a class="heading"  href="#modal" data-toggle="modal" data-url="{{ path('admin_cloud_file_preview', {globalId: cloudFile.no})}}"  data-placement="top" title="{{ cloudFile.filename }}">{{ cloudFile.filename }}</a>
           <span class="subtitle">
             {% if createdUser %}
-                {{ createdUser.nickname }} 上传
+                {{ createdUser.nickname }} {{ '上传'|trans }}
             {% endif %}
           </span>
           {% if cloudFile.type in ['video', 'ppt', 'document'] %}
@@ -37,7 +37,7 @@
             {% endif %}
           {% endif %}
           {% if  cloudFile.usedCount|default(0) == 0 %}
-          <span class="label label-default">未使用</span>
+          <span class="label label-default">{{ '未使用'|trans }}</span>
           {% endif %}
         </div>
     </td>
@@ -45,7 +45,7 @@
     <td class="text-center">
       <div class="mbs">{{ dict_text('fileType', cloudFile.type) }}</div>
       {% if cloudFile.mcStatus|default('no') == 'yes' %}
-        <div class="label label-info mtm">已生成MP4</div>
+        <div class="label label-info mtm">{{ '已生成MP4'|trans }}</div>
       {% endif %}
     </td>
     <td class="text-center">
@@ -56,17 +56,17 @@
     </td>
     <td class="es-materillib-table text-center">
       <div class="btn-group ">
-        <a class="btn btn-default btn-sm js-detail-btn " data-url="{{ path('admin_cloud_file_detail', {globalId:cloudFile.no}) }}">编辑</a>
+        <a class="btn btn-default btn-sm js-detail-btn " data-url="{{ path('admin_cloud_file_detail', {globalId:cloudFile.no}) }}">{{ '编辑'|trans }}</a>
 
         <a href="#" type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown">
           <span class="caret"></span>
         </a>
         <ul class="dropdown-menu pull-right">
           <li>
-            <a class="" href="{{ path('admin_cloud_file_download', {globalId:cloudFile.no}) }}"title="下载" target="__blank"><span class="glyphicon glyphicon-download-alt"></span> 下载</a>
+            <a class="" href="{{ path('admin_cloud_file_download', {globalId:cloudFile.no}) }}"title="下载" target="__blank"><span class="glyphicon glyphicon-download-alt"></span> {{ '下载'|trans }}</a>
           </li>
           <li>
-            <a class="js-delete-btn" href="javascript:" data-url="{{ path('admin_cloud_file_delete_modal_show') }}" data-id="{{ cloudFile.no }}"><span class="glyphicon glyphicon-trash"></span> 删除</a>
+            <a class="js-delete-btn" href="javascript:" data-url="{{ path('admin_cloud_file_delete_modal_show') }}" data-id="{{ cloudFile.no }}"><span class="glyphicon glyphicon-trash"></span> {{ '删除'|trans }}</a>
           </li>
         </ul>
       </div>
