--- a/src/Topxia/AdminBundle/Resources/views/CloudFile/table.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/CloudFile/table.html.twig
@@ -2,11 +2,11 @@
   <table class="table table-striped table-hover mtl" id="materials-table" data-url="{{ path('admin_cloud_file_render_table')}}">
     <thead>
       <tr>
-        <th width="40%">文件</th>
-        <th width="" class="text-center">类型</th>
-        <th width="" class="text-center">大小</th>
-        <th width="" class="text-center">上传时间</th>
-        <th width="" class="text-center" style="min-width:98px">操作</th>
+        <th width="40%">{{ '文件'|trans }}</th>
+        <th width="" class="text-center">{{ '类型'|trans }}</th>
+        <th width="" class="text-center">{{ '大小'|trans }}</th>
+        <th width="" class="text-center">{{ '上传时间'|trans }}</th>
+        <th width="" class="text-center" style="min-width:98px">{{ '操作'|trans }}</th>
       </tr>
     </thead>
 
