--- a/src/Topxia/AdminBundle/Resources/views/CloudFile/tbody.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/CloudFile/tbody.html.twig
@@ -3,7 +3,7 @@
   {% include 'TopxiaAdminBundle:CloudFile:table-tr.html.twig' with {createdUser:createdUser, cloudFile:material} %}
 {% else %}
   <tr>
-    <td class="empty" colspan="10" style="color:#999;padding:80px;">没有搜索到任何资源......</td>
+    <td class="empty" colspan="10" style="color:#999;padding:80px;">{{ '没有搜索到任何资源......'|trans }}</td>
   </tr>
 {% endfor %}
 
@@ -12,7 +12,7 @@
     {% if paginator.lastPage > 1 %}
       <ul class="pagination">
         {% if paginator.currentPage != paginator.firstPage %}
-          <li data-page="{{paginator.firstPage}}"><a  href="javascript:;">首页</a></li>
+          <li data-page="{{paginator.firstPage}}"><a  href="javascript:;">{{ '首页'|trans }}</a></li>
           <li data-page="{{paginator.previousPage}}"><a  href="javascript:;"><i class="es-icon es-icon-chevronleft"></i></a></li>
         {% endif %}
         {% for page in paginator.pages %}
@@ -21,7 +21,7 @@
 
         {% if paginator.currentPage != paginator.lastPage %}
           <li data-page="{{paginator.nextPage}}"><a  href="javascript:;"><i class="es-icon es-icon-chevronright"></i></a></li>
-          <li data-page="{{paginator.getLastPage}}"><a  href="javascript:;">尾页</a></li>
+          <li data-page="{{paginator.getLastPage}}"><a  href="javascript:;">{{ '尾页'|trans }}</a></li>
         {% endif %}
       </ul>
     {% endif %}
