--- a/web/assets/v2/less/page/open-course.less
+++ b/web/assets/v2/less/page/open-course.less
@@ -209,7 +209,9 @@
     		}
     	}
     	@media (max-width:@screen-xs-max){
-    		margin-top: 5px;	
+    		margin-top: 5px;
+    		width: 100%;
+    		display: block;	
     	}
 		}
 		.course-img{
@@ -236,6 +238,7 @@
 			@media (max-width:@screen-xs-max){
 				padding: 10px 15px;
 				font-size: 12px;	
+				width: 100%;
 			}
 		}
 	} 
