--- a/src/Topxia/WebBundle/Resources/views/OpenCourse/open-course-show.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/OpenCourse/open-course-show.html.twig
@@ -18,6 +18,10 @@
   {% endif %}
 {% endblock %}
 
+{% block img %}
+  <img width="0" height="0" src="{{ filepath(course.largePicture|default(''), 'course.png') }}" >
+{% endblock %}
+
 {% block content %}
   <ol class="breadcrumb open-course-breadcrumb">
     <li><a href="{{ path('homepage') }}">首页</a></li>
