--- a/src/Topxia/WebBundle/Resources/views/layout.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/layout.html.twig
@@ -42,6 +42,7 @@
 <body {% if bodyClass|default('') %}class="{{ bodyClass }}"{% endif %}>
 
 {% block body %}
+  {% block img %} {% endblock %}
   <div class="es-wrap">
 
     {% block header %}
