--- a/web/themes/default-b/TopxiaWebBundle/views/Default/index.html.twig
+++ b/web/themes/default-b/TopxiaWebBundle/views/Default/index.html.twig
@@ -25,7 +25,7 @@
     <div class="row row-9-3">
       <div class="col-md-9">
 
-        {% set openCourses = data('OpenCourses',{ count:3, orderType:'recommendedSeq' }) %}
+        {% set openCourses = data('OpenCourses',{ count:3, orderBy:'recommendedSeq' }) %}
         {% if openCourses %}
           <div class="es-box">
             <div class="es-box-heading">
