--- a/src/Topxia/WebBundle/Resources/views/OpenCourse/Mobile/open-course-show.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/OpenCourse/Mobile/open-course-show.html.twig
@@ -5,8 +5,12 @@
   {{ setting('site.name', 'EduSoho网校') }}
 {% endblock %}
 
-{% block img %}
-  <img width="0" height="0" src="{{ filepath(course.largePicture|default(''), 'course.png') }}" >
+{% block description %}
+  {% if course.about %}
+    {{ course.about|purify_and_trim_html|default('')|plain_text(100) }}
+  {% else %}
+    {{ parent() }}
+  {% endif %}
 {% endblock %}
 
 {% block full_content %}
