排查adminbundle-twig语言串4

--- a/src/Topxia/AdminBundle/Resources/views/Default/popular-courses-table.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/popular-courses-table.html.twig
@@ -14,8 +14,8 @@
 					<td>
 						<a href="{{ path('course_show', {id: sortedcourse.courseId}) }}" target="_blank">{{ sortedcourse.title }}</a>
 					</td>
-					<td>{{ sortedcourse['addedStudentNum'] }} 人 </td>
-					<td>{{ sortedcourse['studentNum'] }} 人</td>
+					<td>{{ sortedcourse['addedStudentNum'] }} {{ '人'|trans }} </td>
+					<td>{{ sortedcourse['studentNum'] }} {{ '人'|trans }}</td>
 					<td class="money-text">{{sortedcourse['addedMoney'] }} {{'元'|trans}} </td>
 				</tr>
 			{% endfor %}
