排查adminbundle-twig语言串

--- a/src/Topxia/AdminBundle/Resources/views/Dictionary/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Dictionary/index.html.twig
@@ -9,9 +9,9 @@
 <table class="table table-hover" id="discovery-table">
   <thead>
     <tr>
-      <th width="50%">名称</th>
-      <th width="15%">显示序号</th>
-      <th width="20%">操作</th>
+      <th width="50%">{{ '名称'|trans }}</th>
+      <th width="15%">{{ '显示序号'|trans }}</th>
+      <th width="20%">{{ '操作'|trans }}</th>
     </tr>
   </thead>
   {% include 'TopxiaAdminBundle:Dictionary:tbody.html.twig' %}
