--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/edu-cloud.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/edu-cloud.html.twig
@@ -1,6 +1,6 @@
 {% extends 'TopxiaAdminBundle:EduCloud:edu-cloud-layout.html.twig' %}
 
-{% block title %}教育云 - {{ parent() }}{% endblock %}
+{% block title %}{{ '教育云'|trans }} - {{ parent() }}{% endblock %}
 
 {% set menu = 'overview' %}
 {# {% set script_controller = '' %} #}
