--- a/src/Topxia/AdminBundle/Resources/views/System/course-setting.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/System/course-setting.html.twig
@@ -11,7 +11,7 @@
 <form class="form-horizontal" method="post" id="course-form" novalidate>
 
   <fieldset>
-    < class="form-group">
+    <div class="form-group">
       <div class="col-md-3 control-label">
         <label >{{'给新'|trans}}{% if setting('default.user_name') %}{{'%user_name%发送欢迎私信'|trans({'%user_name%': setting('default.user_name')|default('学员'|trans)})}}{% endif %}</label>
       </div>
