--- a/src/Topxia/WebBundle/Resources/views/OpenCourse/member-sms-modal.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/OpenCourse/member-sms-modal.html.twig
@@ -11,7 +11,7 @@
           </div>
           {% if app.user and app.user.verifiedMobile %}
             <div class = "col-md-3">
-              <input id='mobile' type="text" class="form-control" name="mobile" value="{{ app.user.verifiedMobile }}" readonly="readonly" placeholder="{{'输入手机号码'|trans}}"  />
+              <input id='mobile' type="text" class="form-control" name="mobile" value="{{ app.user.verifiedMobile }}" readonly="readonly" placeholder="{{'输入手机号码'|trans}}" data-url="{{path('open_course_mobile_check')}}"  />
             </div>
             <div class = "col-md-3 mts" >
               <a class="text-sm text-muted modify_mobile" href="javascript:;">{{'修改手机号码'|trans}}</a>
@@ -50,10 +50,10 @@
             <input type="text" class="form-control" id="sms-code-modal" name="sms_code_modal"  required="required" placeholder="{{'输入短信验证码'|trans}}" data-url="{{path('edu_cloud_sms_check',{type:'system_remind'})}}">
           </div>
           <div class="open-course-form-btn">
-            <span class="btn btn-default btn-md js-sms-send disabled" data-url="{{ path('edu_cloud_sms_send') }}">
+            <button type="button" class="btn btn-default btn-md js-sms-send" data-url="{{ path('edu_cloud_sms_send') }}" disabled>
               <span id="js-time-left"></span>
               <span id="js-fetch-btn-text">{{'获取短信验证码'|trans}}{# 秒后重新获取 #}</span>
-           </span>
+           </button>
           </div>
           <div class="help-block mtm"></div>
         </div>
