排查adminbundle-twig语言串已排完

--- a/src/Topxia/AdminBundle/Resources/views/System/user-center.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/System/user-center.html.twig
@@ -48,9 +48,9 @@
     <div class="controls col-md-8">
       <textarea id="email_filter" name="email_filter" class="form-control" rows="5">{{setting.email_filter}}</textarea>
       <div class="help-block">
-        {% verbatim %}
+        {#{% verbatim %}#}
         <div>{{'每行输入一个邮箱地址。名单中的邮箱地址如果出现在第三方登录的过程中，则会给该用户随机生成一个邮箱'|trans}}</div>
-        {% endverbatim %}
+        {#{% endverbatim %}#}
       </div>
     </div>
   </div>
