--- a/src/Topxia/AdminBundle/Resources/views/Theme/theme-edit-config-li.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Theme/theme-edit-config-li.html.twig
@@ -12,13 +12,13 @@
     {% if pendant.code not in ['login-box']%}
       
       {% if pendant.code == 'middle-banner' or pendant.code == 'footer-link' %}
-        <a href="{{path('admin_block', {category:'theme'|default('all')})}}" target="_blank" class="btn btn-primary btn-sm item-set-btn" {% if not isChoiced|default(null) %}style="display:none;"{% endif %}><span class="glyphicon glyphicon-wrench"></span> 设置</a>
+        <a href="{{path('admin_block', {category:'theme'|default('all')})}}" target="_blank" class="btn btn-primary btn-sm item-set-btn" {% if not isChoiced|default(null) %}style="display:none;"{% endif %}><span class="glyphicon glyphicon-wrench"></span> {{ '设置'|trans }}</a>
       {% elseif pendant.code == 'advertisement-banner' %}
-        <a href="{{path('admin_block', {category:'theme'|default('all')})}}" target="_blank" class="btn btn-primary btn-sm item-set-btn" {% if not isChoiced|default(null) %}style="display:none;"{% endif %}><span class="glyphicon glyphicon-wrench"></span> 设置</a>
+        <a href="{{path('admin_block', {category:'theme'|default('all')})}}" target="_blank" class="btn btn-primary btn-sm item-set-btn" {% if not isChoiced|default(null) %}style="display:none;"{% endif %}><span class="glyphicon glyphicon-wrench"></span> {{ '设置'|trans }}</a>
       {% elseif pendant.code == 'friend-link' %}
-        <a href="{{path('admin_navigation', {type:'friendlyLink'})}}" target="_blank" class="btn btn-primary btn-sm item-set-btn"><span class="glyphicon glyphicon-wrench"></span> 设置</a>
+        <a href="{{path('admin_navigation', {type:'friendlyLink'})}}" target="_blank" class="btn btn-primary btn-sm item-set-btn"><span class="glyphicon glyphicon-wrench"></span> {{ '设置'|trans }}</a>
       {% else  %}
-        <button class="btn btn-primary btn-sm item-edit-btn" {% if not isChoiced|default(null) %}style="display:none;"{% endif %} data-title="Edit" data-toggle="modal" data-target="#modal" data-url="{{path('admin_themes_config_edit', {uri:uri|default(null),config:pendant})}}"><span class="glyphicon glyphicon-pencil"></span> 编辑</button>
+        <button class="btn btn-primary btn-sm item-edit-btn" {% if not isChoiced|default(null) %}style="display:none;"{% endif %} data-title="Edit" data-toggle="modal" data-target="#modal" data-url="{{path('admin_themes_config_edit', {uri:uri|default(null),config:pendant})}}"><span class="glyphicon glyphicon-pencil"></span> {{ '编辑'|trans }}</button>
       {% endif %}
     {% endif %}
   </div>
