--- a/src/Topxia/WebBundle/Resources/views/layout.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/layout.html.twig
@@ -15,7 +15,7 @@
     {%- endblock -%}
   </title>
   <meta name="keywords" content="{% spaceless %}{% block keywords %}{{ setting('site.seo_keywords') }}{% endblock %}{% endspaceless %}" />
-  <meta name="Description" content="{% spaceless %}{% block description %}{{ setting('site.seo_description') }}{% endblock %}{% endspaceless %}" />
+  <meta name="description" content="{% spaceless %}{% block description %}{{ setting('site.seo_description') }}{% endblock %}{% endspaceless %}" />
   <meta content="{{ csrf_token('site') }}" name="csrf-token" />
   <meta content="{{ app.user.isLogin()|default(0) }}" name="is-login" />
   <meta content="{{ setting('login_bind.weixinmob_enabled')|default(0) }}" name="is-open" />
