--- a/src/Topxia/WebBundle/Resources/views/OpenCourseManage/student-unlogin-list.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/OpenCourseManage/student-unlogin-list.html.twig
@@ -3,8 +3,10 @@
 <table class="table table-striped" id="course-student-list">
   <thead>
     <tr>
-      <th width="40%">IP</th>
-      <th width="30%">{{'最近进入'|trans}}</th>
+      <th width="30%">IP</th>
+      <th width="20%">{{'最近进入'|trans}}</th>
+      <th width="20%">手机号</th>
+      <th width="20%">是否报名</th>
     </tr>
   </thead>
   <tbody>
@@ -13,10 +15,11 @@
         <td class="media" style="vertical-align: middle;">
           {{ student.ip }}
         </td>
-
         <td style="vertical-align: middle;">
           {{ student.lastEnterTime|date('Y-m-d H:i:s') }}
         </td>
+        <td>{{ student.mobile }}</td>
+        <td>{% if student.isNotified %}是{% endif %}</td>
       </tr>
     {% else %}
       <tr class="empty"><td colspan="20">{{'暂无记录'|trans}}</td></tr>
