--- a/src/Topxia/WebBundle/Resources/views/OpenCourseManage/student-login-list.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/OpenCourseManage/student-login-list.html.twig
@@ -3,9 +3,11 @@
 <table class="table table-striped" id="course-student-list">
   <thead>
     <tr>
-      <th width="40%">{% if setting('default.user_name') %}{{setting('default.user_name')|default('学员'|trans)}}{% else %}{{'学员'|trans}}{% endif %}</th>
-      <th width="30%">{{'最近进入'|trans}}</th>
-      <th width="30%">{{'操作'|trans}}</th>
+      <th width="30%">{% if setting('default.user_name') %}{{setting('default.user_name')|default('学员'|trans)}}{% else %}{{'学员'|trans}}{% endif %}</th>
+      <th width="20%">{{'最近进入'|trans}}</th>
+      <th width="20%">{{'手机号'|trans}}</th>
+      <th>{{'是否报名'|trans}}</th>
+      <th>{{'操作'|trans}}</th>
     </tr>
   </thead>
   <tbody>
@@ -22,6 +24,8 @@
           {{ student.lastEnterTime|date('Y-m-d H:i:s') }}
         </td>
 
+        <td style="vertical-align: middle;">{{ student.mobile }}</td>
+        <td style="vertical-align: middle;">{% if student.isNotified %}是{% endif %}</td>
         <td style="vertical-align: middle;">
           <div class="btn-group">
             {% if app.user.id != user.id %}
