--- a/src/Topxia/WebBundle/Resources/views/OpenCourse/Mobile/open-course-show.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/OpenCourse/Mobile/open-course-show.html.twig
@@ -24,7 +24,7 @@
         <div class="open-course-wechat-qrcode hidden-md hidden-sm hidden-xs">
           {# 二维码地址去掉url的query部分 #}
           <img src="{{ qrcode_data_uri(wxPreviewUrl) }}">
-          <p class="text-center">微信扫一扫预览</p>
+          <p class="text-center">二维码只用于微信扫一<br>扫预览，不可用于分享</p>
         </div>
       </div>
     </div>
