--- a/src/Topxia/WebBundle/Resources/views/OpenCourse/open-course-header.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/OpenCourse/open-course-header.html.twig
@@ -95,7 +95,8 @@
         {% elseif ("now"|date("U")) > lesson.startTime and ("now"|date("U")) <= lesson.endTime %}
           <div class="mask-content">
             <h2>{{'直播已经开始，直播将于'|trans}}<span class="phm">{{ lesson.endTime|date('m') }}{{ '月'|trans }}{{ lesson.endTime|date('d') }}{{ '日'|trans }} {{ lesson.endTime|date('H:i') }}</span>{{'结束'|trans}}</h2>
-            <a class="btn btn-info btn-lg mask-btn" href="{{ path('live_open_course_play',{courseId:course.id,lessonId:lesson.id})}}" target="_blank">{{'进入直播教室'|trans}}</a>
+            {% set refererUrl = app.request.server.get('HTTP_REFERER') %}
+            <a class="btn btn-info btn-lg mask-btn" href="{{ path('live_open_course_play',{courseId:course.id,lessonId:lesson.id, refererUrl:refererUrl})}}" target="_blank">{{'进入直播教室'|trans}}</a>
             
           </div>
         {% else %}
