--- a/src/Topxia/WebBundle/Resources/views/OpenCourse/Mobile/open-course-show.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/OpenCourse/Mobile/open-course-show.html.twig
@@ -31,5 +31,6 @@
   </div>
   {% endif %}
   {% block bottom_content %}{% endblock %}
+  {% include 'TopxiaWebBundle:Common:weixin-share.html.twig' with {'type': 'open-course'} %}
 {% endblock %}
     
