--- a/src/Topxia/WebBundle/Resources/views/OpenCourse/open-course-show.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/OpenCourse/open-course-show.html.twig
@@ -75,5 +75,6 @@
     </div>
     {# {% endcache %} #}
   </div>
+  {% include 'TopxiaWebBundle:Common:weixin-share.html.twig' with {'type': 'open-course'} %}
 {% endblock %}
     
