--- a/src/Topxia/AdminBundle/Resources/views/DeveloperSetting/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/DeveloperSetting/index.html.twig
@@ -65,6 +65,15 @@
 
   <div class="form-group">
     <div class="col-md-3 control-label">
+      <label>气球云SDK的CDN地址</label>
+    </div>
+    <div class="controls col-md-8 radios">
+      <input class="form-control" type="text" name="cloud_sdk_cdn" value="{{ developerSetting.cloud_sdk_cdn|default('') }}">
+    </div>
+  </div>
+
+  <div class="form-group">
+    <div class="col-md-3 control-label">
       <label>HLS加密视频</label>
     </div>
     <div class="controls col-md-8 radios">
