--- a/src/Topxia/WebBundle/Resources/views/MyTeaching/open-course.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/MyTeaching/open-course.html.twig
@@ -58,8 +58,10 @@
                   <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu pull-right">
-                  <li><a href="{{ path('open_course_manage_lesson', {id:course.id}) }}">{{'课时管理'|trans}}</a></li>
-                  <li><a href="{{ path('open_course_manage_files', {id:course.id}) }}">{{'文件管理'|trans}}</a></li>
+                  {% if course.type != 'liveOpen' %}
+                    <li><a href="{{ path('open_course_manage_lesson', {id:course.id}) }}">{{'课时管理'|trans}}</a></li>
+                    <li><a href="{{ path('open_course_manage_files', {id:course.id}) }}">{{'文件管理'|trans}}</a></li>
+                  {% endif %}
                   <li><a href="{{ path('open_course_manage_students', {id:course.id}) }}">{% if setting('default.user_name') %}{{setting('default.user_name')|default('学员'|trans)}}{% else %}{{'学员'|trans}}{% endif %}{{'管理'|trans}}</a></li>
                 </ul>
               </div>
