--- a/src/Topxia/WebBundle/Resources/views/OpenCourse/Mobile/open-course-show.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/OpenCourse/Mobile/open-course-show.html.twig
@@ -35,6 +35,13 @@
   </div>
   {% endif %}
   {% block bottom_content %}{% endblock %}
-  {% include 'TopxiaWebBundle:Common:weixin-share.html.twig' with {'type': 'open-course'} %}
+  {% include 'TopxiaWebBundle:Common:weixin-share.html.twig' with {
+  'title': course.title,
+  'desc': course.about|striptags|purify_and_trim_html,
+  'link': app.request.uri,
+  'imgUrl': fileurl(course.largePicture,'course.png'),
+  'type':'',
+  'dataUrl': ''
+  }%}
 {% endblock %}
     
