--- a/src/Topxia/WebBundle/Resources/views/Common/weixin-share.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Common/weixin-share.html.twig
@@ -7,8 +7,8 @@
  		data-desc='{{desc}}'
  		data-link="{{link}}" 
  		data-img-url="{{imgUrl}}" 
- 		data-type="{{type}}" 
- 		data-data-url="{{dataUrl}}">
+ 		data-type="{{type|default('')}}" 
+ 		data-data-url="{{dataUrl|default('')}}">
 	</div>
 {% endif %}
 {# 	
