--- a/src/Topxia/WebBundle/Resources/views/User/courses_favorited.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/User/courses_favorited.html.twig
@@ -15,10 +15,12 @@
             {% include 'TopxiaWebBundle:Course:Widget/course-grid.html.twig' %}
           </div>
         {% elseif courseFavorite.type == 'openCourse' %}
-          {% set course = data('OpenCourse',{courseId:courseFavorite.courseId}) %}
-          <div class="col-lg-3 col-md-4 col-xs-6">
-            {% include 'TopxiaWebBundle:OpenCourse/Widget:open-course-grid.html.twig' %}
-          </div>
+          {% set course = data('OpenCourse',{courseId:courseFavorite.courseId})|default(null) %}
+          {% if course %}
+            <div class="col-lg-3 col-md-4 col-xs-6">
+              {% include 'TopxiaWebBundle:OpenCourse/Widget:open-course-grid.html.twig' %}
+            </div>
+          {% endif %}
         {% endif %}
         
       {% else %}
