--- a/src/Topxia/WebBundle/Resources/views/OpenCourse/explore.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/OpenCourse/explore.html.twig
@@ -1,5 +1,7 @@
 {% extends 'TopxiaWebBundle::layout.html.twig' %}
 
+{% set bodyClass = 'bg-blank' %}
+
 {% set siteNav = 'course/explore' %}
 {% set script_controller = 'open-course/open-course-explore' %}
 
