--- a/web/assets/v2/less/page/index.less
+++ b/web/assets/v2/less/page/index.less
@@ -302,6 +302,12 @@
   }
 }
 
+.open-course-list-section {
+  .course-item .course-img .img-responsive {
+    padding: 0;
+  }
+}
+
 // .lt-ie9 .recommend-class-list .class-item {
 //   border: 1px solid @gray-light;
 // }
