--- a/web/assets/v2/less/page/open-course.less
+++ b/web/assets/v2/less/page/open-course.less
@@ -595,7 +595,7 @@
 }
 //频道页
 .open-course-list {
-	background-color: #f5f8fa;
+	// background-color: #f5f8fa;
 	.course-block {
 		padding: 20px;
 		border:1px solid #e4ecf3;
