--- a/src/Topxia/WebBundle/Resources/views/Default/open-course.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Default/open-course.html.twig
@@ -1,4 +1,4 @@
-<section class="course-list-section {{config.background|default("")}}" id="open-course-list-section">
+<section class="course-list-section open-course-list-section {{config.background|default("")}}" id="open-course-list-section">
   {% import "TopxiaWebBundle::macro.html.twig" as web_macro %}
 
   {% set count = config.count|default(12) %}
