--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/cloud-attachment.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/cloud-attachment.html.twig
@@ -15,11 +15,11 @@
                          </div>
                          <div class="controls col-md-8 radios">
                              <label class="">
-                                 <input type="radio" name="enable" id="attachment_enable"
+                                 <input type="radio" name="enable"
                                         value="1" {% if attachment.enable %} checked {% endif %}> 开启
                              </label>
                              <label class="radio-inline">
-                                 <input type="radio" name="enable" id="attachment_disaable"
+                                 <input type="radio" name="enable"
                                         value="0" {% if not attachment.enable %} checked {% endif %}> 关闭
                              </label>
                          </div>
