--- a/src/Permission/PermissionBundle/Resources/views/Role/index.html.twig
+++ b/src/Permission/PermissionBundle/Resources/views/Role/index.html.twig
@@ -55,7 +55,7 @@
         </td>
       </tr>
     {% else %}
-      <tr><td class="empty" colspan="20">无定时任务记录</tr>
+      <tr><td class="empty" colspan="20">暂无角色</tr>
     {% endfor %}
   </table>
 
