--- a/src/Topxia/AdminBundle/Resources/views/CloudAttachment/table-tr.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/CloudAttachment/table-tr.html.twig
@@ -59,7 +59,7 @@
     </td>
     <td class="es-materillib-table text-center">
       <div class="btn-group ">
-         <a class="btn btn-default btn-sm js-detail-btn " href="{{ path('admin_cloud_file_download', {globalId:cloudAttachment.no}) }}"title="下载" target="__blank"><span class="glyphicon glyphicon-download-alt"></span> 下载</a>
+         <a class="btn btn-default btn-sm " href="{{ path('admin_cloud_file_download', {globalId:cloudAttachment.no}) }}"title="下载" target="__blank"><span class="glyphicon glyphicon-download-alt"></span> 下载</a>
         <a href="#" type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown">
           <span class="caret"></span>
         </a>
