--- a/src/Topxia/AdminBundle/Resources/views/Teacher/teacher-promote-list.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Teacher/teacher-promote-list.html.twig
@@ -2,7 +2,7 @@
 
 {% set script_controller = 'teacher/promote-list' %}
 
-{% set menu = 'admin_teacher_promote' %}
+{% set menu = 'admin_teacher_promote_list' %}
 
 {% block main %}
 
