--- a/src/Topxia/AdminBundle/Resources/views/CloudFile/detail.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/CloudFile/detail.html.twig
@@ -52,7 +52,7 @@
                 </div>
                 <div class="tab-pane-img material-detail-img" id="self-select">
                   <div class="video-player-container detail-img">
-                    <iframe src="{{ path('material_lib_file_player', {fileId:material.id, watermarkOpened:'hidden'}) }}" id="viewerIframe" width="100%" allowfullscreen webkitallowfullscreen height="100%" style="border:0px"></iframe>
+                    <iframe src="{{ path('material_lib_file_player', {fileId:material.id, watermarkOpened:'hidden', 'disableVolumeButton': 1, 'disablePlaybackButton':1, 'disableResolutionSwitcher': 1}) }}" id="viewerIframe" width="100%" allowfullscreen webkitallowfullscreen height="100%" style="border:0px"></iframe>
                   </div>
                   <div class="btn-content">
                     {% if material.thumbnail|default(0) %}
