--- a/src/Topxia/WebBundle/Resources/views/Player/show.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Player/show.html.twig
@@ -41,11 +41,10 @@
           {% elseif file.storage == 'local' %}
             class="local-video-player"
           {% endif %}
-            data-timelimit="{{ context.watchTimeLimit|default('')}}"
-            data-markerurl="{{ context.markerUrl|default('')}}"
           {% if context.hideQuestion|default(0) == 0 %}
-            data-question-markers='{{ render(controller('TopxiaWebBundle:QuestionMarker:showQuestionMakers', {mediaId: file.id})) }}'
+            data-markerurl="{{ path('course_lesson_question_markers_show', {mediaId: file.id}) }}"
           {% endif %}
+            data-timelimit="{{ context.watchTimeLimit|default('')}}"
             data-starttime="{{ context.starttime|default('')}}"
             data-lesson-id="{{ context.lessonId|default(0)}}"
             style="height:100%"
